      (also for WATO hosts table)

    WATO: 
    * Main menu of ruleeditor (Host & Service Parameters) now has
      a topic for "Used rules" - a short overview of all non-empty
      rulesets.
    * FIX: add missing context help to host details dialog
    * FIX: set new site dirty is host move due to change of
      folder attributes

1.2.0p1:
    Core:
    * Added macros $DATE$, $SHORTDATETIME$ and $LONGDATETIME$' to
      notification macros

    Checks & Agents:
    * FIX: diskstat: handle output 'No Devices Found' - avoiding exception
    * 3ware_units: Following states now lead to WARNING state instead of
      CRITICAL: "VERIFY-PAUSED", "VERIFYING", "REBUILDING"
    * New checks tsm_stagingpools, tsm_drive and tsm_storagepools
      Linux/UNIX
    * hpux_fchba: new check for monitoring FibreChannel HBAs und HP-UX

    Multisite:
    * FIX: fix severe exception in all views on older Python versions
      (like RedHat 5.5).

    WATO:
    * FIX: fix order of rule execution: subfolders now take precedence
      as they should.

1.2.0:
    Setup:
    * FIX: fix building of RPM packages (due to mk_mysql, mk_postgres)

    Core:
    * FIX: fix error message in case of duplicate custom check

    WATO:
    * FIX: add missing icon on cluster hosts to WATO in Multisite views
    * FIX: fix search field in host table if more than 10 hosts are shown
    * FIX: fix bulk edit and form properties (visibility of attributes was broken)
    * FIX: fix negating hosts in rule editor

    Checks & Agents: 
    * fileinfo: added this check to Linux agent. Simply put your
      file patterns into /etc/check_mk/fileinfo.cfg for configuration.
    * mysql.sessions: New check for MySQL sessions (need new plugin mk_mysql)
    * mysql.innodb_io: New check for Disk-IO of InnoDB
    * mysql_capacity: New check for used/free capacity of MySQL databases
    * postgres_sessions: New check for PostgreSQL number of sessions